--- a/Frontend-ProInvest/Views/Shared/_Layout.cshtml
+++ b/Frontend-ProInvest/Views/Shared/_Layout.cshtml
@@ -6,7 +6,8 @@
     <title>@ViewData["Title"] - Frontend_ProInvest</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Frontend_ProInvest.styles.css" asp-append-version="true" />
+    <!--<link rel="stylesheet" href="~/Frontend_ProInvest.styles.css" asp-append-version="true" />-->
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 </head>
 <body>
     <header>
