--- a/Frontend-ProInvest/wwwroot/css/site.css
+++ b/Frontend-ProInvest/wwwroot/css/site.css
@@ -16,3 +16,56 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+/* Estilos del formulario */
+form {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.card {
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.card-header {
+    background-color: lightgray;
+    color: black;
+    font-size: 24px;
+    text-align: center;
+}
+
+.card-body {
+    padding: 20px;
+}
+
+.form-label {
+    font-size: 18px;
+}
+
+.form-control, .form-select {
+    font-size: 16px;
+}
+
+.slider {
+    width: 100%;
+}
+
+.card-footer {
+    background-color: lightgray;
+    color: white;
+    text-align: center;
+    font-size: 18px;
+}
+
+/* Estilos del gráfico */
+.container-chart {
+    width: 100%;
+    height: 500px;
+    margin-top: 20px;
+}
+
+.chart {
+    width: 100%;
+    height: 100%;
+}
