--- a/Frontend-ProInvest/wwwroot/css/site.css
+++ b/Frontend-ProInvest/wwwroot/css/site.css
@@ -2,11 +2,6 @@ html {
   font-size: 14px;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
 
 html {
   position: relative;
@@ -61,11 +56,29 @@ form {
 /* Estilos del gráfico */
 .container-chart {
     width: 100%;
-    height: 500px;
     margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .chart {
     width: 100%;
-    height: 100%;
+    height: 60px;
+}
+
+.row {
+    display: flex;
+    align-items: center;
+}
+
+#btnInvertir {
+    width:max-content;
+}
+
+@media (min-width: 768px) {
+  html {
+    font-size: 16px;
+  }
 }
