--- a/Frontend-ProInvest/Views/Home/Privacy.cshtml
+++ b/Frontend-ProInvest/Views/Home/Privacy.cshtml
@@ -45,7 +45,7 @@
         <div class="col-xs-12 col-sm-6 col-md-6">
             <div class="container-chart">
                 <div class="chart"></div>
-                <a href="Index" class="btn btn-primary" id="btnInvertir">Invertir ahora</a>
+                <a href="FormularioInversion" class="btn btn-primary" id="btnInvertir">Invertir ahora</a>
             </div>
         </div>
     </div>
