--- a/Frontend-ProInvest/Views/Home/Privacy.cshtml
+++ b/Frontend-ProInvest/Views/Home/Privacy.cshtml
@@ -4,6 +4,7 @@
 }
 <head>
     <script defer src="~/js/simulacion.js"></script>
+    <link rel="stylesheet" href="~/css/GraficaSimulacion.css" asp-append-version="true" />
 </head>
 <div class="container">
     <div class="row">
