--- a/Frontend-ProInvest/Views/Home/FormularioInversion.cshtml
+++ b/Frontend-ProInvest/Views/Home/FormularioInversion.cshtml
@@ -2,64 +2,86 @@
 @{
     ViewData["Title"] = "Solicita tu inversión";
 }
-
 <div class="contenedor-grid">
     <div class="lado-izquierdo">
-
     </div>
     <div class="lado-derecho">
-        <form id="formulario-simulacion" for="click">
+        <form for="click" class="form-flex">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="card mx-auto mt-3" style="max-width: 500px;">
-                <div class="card-header">
-                    Datos personales
-                </div>
-                <div class="card-body">
-                    <div class="mb-3">
+            
+                <h2 class="form-row">Información personal</h2>
+                <div class="form-row">
+                    <div class="form-group">
                         <label asp-for=@Model.Inversionista.Nombre class="form-label"></label>
                         <input asp-for=@Model.Inversionista.Nombre class="form-control">
-                        <span asp-validation-for="@Model.Inversionista.Nombre class="text-danger"></span>
+                        <span asp-validation-for="@Model.Inversionista.Nombre class=" text-danger"></span>
                     </div>
-                    <div class="mb-3">
+                    <div class="form-group">
                         <label asp-for=@Model.Inversionista.ApellidoPaterno class="form-label"></label>
                         <input asp-for=@Model.Inversionista.ApellidoPaterno class="form-control" >
                         <span asp-validation-for="@Model.Inversionista.ApellidoPaterno class="text-danger"></span>
                     </div>
-                    <div class="mb-3">
-                        <label asp-for=@Model.Inversionista.Rfc class="form-label"></label>
-                        <input asp-for=@Model.Inversionista.Rfc class="form-control" >
-                        <span asp-validation-for="@Model.Inversionista.Rfc class=" text-danger"></span>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label asp-for=@Model.Inversionista.ApellidoMaterno class="form-label"></label>
+                        <input asp-for=@Model.Inversionista.ApellidoMaterno class="form-control">
+                        <span asp-validation-for="@Model.Inversionista.ApellidoMaterno class=" text-danger"></span>
                     </div>
-                    <div class="mb-3">
+                    <div class="form-group">
                         <label asp-for=@Model.Inversionista.FechaNacimiento class="form-label"></label>
                         <input asp-for=@Model.Inversionista.FechaNacimiento class="form-control" type="date">
                         <span asp-validation-for="@Model.Inversionista.FechaNacimiento class=" text-danger"></span>
                     </div>
-                    <div class="mb-3">
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label asp-for=@Model.Inversionista.Rfc class="form-label"></label>
+                        <input asp-for=@Model.Inversionista.Rfc class="form-control" >
+                        <span asp-validation-for="@Model.Inversionista.Rfc class=" text-danger"></span>
+                    </div>  
+                    <div class="form-group">
                         <label asp-for=@Model.Inversionista.Profesion class="form-label"></label>
                         <input asp-for=@Model.Inversionista.Profesion class="form-control">
                         <span asp-validation-for="@Model.Inversionista.Profesion class=" text-danger"></span>
                     </div>
-                    <div class="mb-3">
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
                         <label asp-for=@Model.Inversionista.EmpresaTrabajo class="form-label"></label>
                         <input asp-for=@Model.Inversionista.EmpresaTrabajo class="form-control">
                         <span asp-validation-for="@Model.Inversionista.EmpresaTrabajo class=" text-danger"></span>
                     </div>
-                    <div class="mb-3">
+                    <div class="form-group">
+                        <label asp-for=@Model.Inversionista.GradoAcademico class="form-label"></label>
+                        <select class="form-select">
+                            <option value="">Seleccione una opción</option>
+                        </select>
+                        <span asp-validation-for="@Model.Inversionista.GradoAcademico" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
                         <label asp-for=@Model.Inversionista.CorreoElectronico class="form-label"></label>
                         <input asp-for=@Model.Inversionista.CorreoElectronico class="form-control" type="email">
                         <span asp-validation-for="@Model.Inversionista.CorreoElectronico class=" text-danger"></span>
                     </div>
-                    <div class="mb-3">
+                    <div class="form-group">
                         <label asp-for=@Model.Inversionista.TelefonoCelular class="form-label"></label>
                         <input asp-for=@Model.Inversionista.TelefonoCelular class="form-control" type="tel">
                         <span asp-validation-for="@Model.Inversionista.TelefonoCelular class=" text-danger"></span>
                     </div>
                 </div>
-                <div class="card-footer text-center">
-                    <button class="btn btn-primary">Siguiente</button>
-                </div>
+            <div class="form-row">
+                <button class="btn btn-info btn-form" id="btnSiguienteP1">Siguiente</button>
             </div>
+            
+            
+            
+            
+            
+                    
+            
         </form>
     </div>
 </div>
