--- a/Frontend-ProInvest/wwwroot/css/site.css
+++ b/Frontend-ProInvest/wwwroot/css/site.css
@@ -1,123 +1,18 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
+@media (min-width: 768px) {
+    html {
+        font-size: 16px;
+    }
+}
 
 html {
-  position: relative;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
     margin-bottom: 60px;
-}
-
-/* Estilos del formulario */
-form {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-}
-
-.card {
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.card-header {
-    background-color: lightgray;
-    color: black;
-    font-size: 24px;
-    text-align: center;
-}
-
-.card-body {
-    padding: 20px;
-}
-
-.form-label {
-    font-size: 18px;
-}
-
-.form-control, .form-select {
-    font-size: 16px;
-}
-
-.slider {
-    width: 100%;
-}
-
-.card-footer {
-    background-color: lightgray;
-    color: white;
-    text-align: center;
-    font-size: 18px;
-}
-
-/* Estilos del gráfico */
-.container-chart {
-    width: 100%;
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.chart {
-    width: 100%;
-    height: 60px;
-}
-
-.row {
-    display: flex;
-    align-items: center;
-}
-
-#btnInvertir {
-    width:max-content;
-}
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-*{
-    margin: 0;
-    padding: 0;
-}
-
-
-.lado-izquierdo {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url('/images/ahorro.jpg');
-    height: 90vh;
-    min-height: 500px;
-    border-radius: 3% 0 0 3%;
-}
-.contenedor-grid {
-    display: grid;
-    grid-template-columns: auto 45%;
-    border: solid 2px;
-    border-color: gray;
-    border-radius: 2%;
-    height: calc();
-    min-height: 500px;
-}
-
-.lado-derecho {
-    display: grid;
-    place-content: center stretch;
-}
-
-@media (max-width: 768px) {
-    .lado-izquierdo {
-        display: none;
-    }
-
-    .lado-derecho {
-        margin-top: 50px;
-        grid-column: 1 / span 2;
-    }
 }
