Corregí uso de CSS y agregué uso de clases de Bootstrap para CU Simular inversión, agregué modelo para paso 1 de formulario. Agregué interfaz gráfica responsiva para paso 1 de formulario con validaciones.

--- a/Frontend-ProInvest/Views/Home/FormularioInversion.cshtml
+++ b/Frontend-ProInvest/Views/Home/FormularioInversion.cshtml
@@ -1,4 +1,4 @@
-﻿@model ContratoInversionViewModel
+﻿@* @model DatosPersonalesViewModel
 @{
     ViewData["Title"] = "Solicita tu inversión";
 }
@@ -84,4 +84,4 @@
             
         </form>
     </div>
-</div>
+</div> *@
