--- a/Frontend-ProInvest/Views/Shared/_Layout.cshtml
+++ b/Frontend-ProInvest/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="FormularioInversion">FormularioInversion</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Formulario" asp-action="DatosPersonales">Invertir ahora</a>
+                        </li>
                     </ul>
                 </div>
             </div>
