--- a/Frontend-ProInvest/Views/Home/Privacy.cshtml
+++ b/Frontend-ProInvest/Views/Home/Privacy.cshtml
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="~/css/GraficaSimulacion.css" asp-append-version="true" />
 </head>
 <div class="container">
-    <div class="row">
+    <div class="row d-flex align-items-center">
         <div class="col-xs-12 col-sm-6 col-md-6">
             <form id="formulario-simulacion" for="click">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="card mx-auto mt-3" style="max-width: 500px;">
-                    <div class="card-header">
+                    <div class="card-header text-center fs-4">
                         Simula tu inversión
                     </div>
                     <div class="card-body">
