Reestructuración de proyecto y corrección de error

--- a/Frontend-ProInvest/Views/Shared/_Layout.cshtml
+++ b/Frontend-ProInvest/Views/Shared/_Layout.cshtml
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Frontend_ProInvest</title>
+    <title>@ViewData["Title"] - Frontend-ProInvest</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <!--<link rel="stylesheet" href="~/Frontend_ProInvest.styles.css" asp-append-version="true" />-->
-    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <link rel="stylesheet" href="~/Frontend-ProInvest.styles.css" asp-append-version="true" />
+    <!--<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>-->
 </head>
 <body>
     <header>
