--- a/Frontend-ProInvest/Views/Home/Index.cshtml
+++ b/Frontend-ProInvest/Views/Home/Index.cshtml
@@ -1,8 +1,25 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="row align-items-center">
+        <div class="col h-100">
+            <img src="~/images/ahorro.jpg " class="img-fluid" alt="Imagen de inversión">
+        </div>
+        <div class="col">
+            <div class="card text-center">
+                <h5 class="card-header">Una inversión segura</h5>
+                <div class="card-body">
+                    <h5 class="card-title">Puedes realizar una simulación de tu inversión a partir de $10,000</h5>
+                    <div class="form-group">
+                        <label class="form-label" for="typeNumber">Cantidad a invertir:</label>
+                        <input type="number" id="typeNumber" class="form-control" min="10000" max="999999999" maxlength="15" />
+                    </div>
+                    <a href="#" class="btn btn-primary">Simular</a>
+                </div>
+             </div>
+        </div>
+    </div>
 </div>
