GUI Dirección responsiva, Navegabilidad de verificación a dirección. Actualización de GUI Datos personales para usar <img> en lugar de un div con background

--- a/Frontend-ProInvest/Views/Formulario/DatosPersonales.cshtml
+++ b/Frontend-ProInvest/Views/Formulario/DatosPersonales.cshtml
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="~/css/Formulario.css" asp-append-version="true" />
 </head>
 <div class="row justify-content-md-center">
-    <div class="col-md-4 form-img" alt="Monedas creciendo plantas"></div>
+    <div class="col-md-4 col-form-img">
+        <img src="/images/ahorro.jpg" alt="Monedas creciendo como plantas" class="img-fluid form-img">
+    </div>
     <div class="col-md-4" style="background:white;">
         <h2 class="text-lg-center">Una inversión segura</h2>
         <h4 class="text-lg-center">Datos personales</h4>
