GUI Información bancaria Creación de GUI Información bancaria con validaciones, ViewModel y archivo para manejar la firma digital. Corregí error cuando no hay conexión con el api para GUI Dirección Eliminé css embebido de GUI Datos personales

--- a/Frontend-ProInvest/Views/Formulario/DatosPersonales.cshtml
+++ b/Frontend-ProInvest/Views/Formulario/DatosPersonales.cshtml
@@ -10,7 +10,7 @@
     <div class="col-md-4 col-form-img">
         <img src="/images/ahorro.jpg" alt="Monedas creciendo como plantas" class="img-fluid form-img">
     </div>
-    <div class="col-md-4" style="background:white;">
+    <div class="col-md-4">
         <h2 class="text-lg-center">Una inversión segura</h2>
         <h4 class="text-lg-center">Datos personales</h4>
         <h6 class="text-md-center">Inicia tu vida como inversionista con nosotros</h6>
