--- a/Frontend-ProInvest/wwwroot/css/Formulario.css
+++ b/Frontend-ProInvest/wwwroot/css/Formulario.css
@@ -13,3 +13,9 @@
     overflow: hidden;
 }
 
+.firma-pad {
+    cursor: url(..//images/pluma.png) 0 30, pointer;
+    border: 2px solid black;
+    border-radius: 4px;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+}
