Cambio de nombre model Datos personales a inversionista

--- a/Frontend-ProInvest/Views/Formulario/DatosPersonales.cshtml
+++ b/Frontend-ProInvest/Views/Formulario/DatosPersonales.cshtml
@@ -1,4 +1,4 @@
-﻿@model Frontend_ProInvest.Models.DatosPersonalesViewModel
+﻿@model Frontend_ProInvest.Models.InversionistaViewModel
 
 @{
     ViewData["Title"] = "DatosPersonales";
