Migración de modelo dirección a inversionista

--- a/Frontend-ProInvest/Views/Formulario/Direccion.cshtml
+++ b/Frontend-ProInvest/Views/Formulario/Direccion.cshtml
@@ -1,4 +1,4 @@
-﻿@model Frontend_ProInvest.Models.DireccionViewModel
+﻿@model Frontend_ProInvest.Models.InversionistaViewModel
 
 @{
     ViewData["Title"] = "Dirección";
