--- a/Frontend-ProInvest/Views/Admin/InicioSesion.cshtml
+++ b/Frontend-ProInvest/Views/Admin/InicioSesion.cshtml
@@ -1,5 +1,4 @@
 ﻿@model Frontend_ProInvest.Models.CredencialesAccesoViewModel
-
 @{
     ViewData["Title"] = "InicioSesion";
     ViewBag.Title = "Inicio de Sesión del Administrador";
@@ -51,42 +50,12 @@
                                 <span asp-validation-for="Contrasena" class="text-danger"></span>
                             </div>
                         </div>
-                        <div class="card-footer text-center">
-                            <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+                        <div class="card-footer text-center d-flex justify-content-between align-items-center">
+                            <a class="text-decoration-none ">@Model.Mensaje</a>
+                            <button  type="submit" class="btn btn-primary">Iniciar Sesión</button>
                         </div>
                     </div>
                 </form>
-            </div>
-        </div>
-    </div>
-    <!-- Modal aviso -->
-    <div class="modal fade" id="modalAviso" tabindex="-1" aria-labelledby="modalAvisoLabel" aria-hidden="true">
-        <div class="modal-dialog modal-xl">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="container">
-                        <h4 class="text-center mb-3">Verifique su cuenta de administrador</h4>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Modal bienvenida -->
-    <div class="modal fade" id="modalBienvenida" tabindex="-1" aria-labelledby="modalBienvenidaLabel"
-        aria-hidden="true" data-mostrar="@ViewBag.MostrarModalBienvenida">
-        <div class="modal-dialog modal-xl">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="container">
-                        <h4 class="text-center mb-3">Bienvenido Administrador</h4>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                </div>
             </div>
         </div>
     </div>
