--- a/Frontend-ProInvest/Views/Admin/AdministrarTiposDeInversion.cshtml
+++ b/Frontend-ProInvest/Views/Admin/AdministrarTiposDeInversion.cshtml
@@ -5,12 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Gestionar tipos de inversión</h1>
+<h1 class="text-center">Gestionar tipos de inversión</h1>
 
-<p>
-    <a asp-action="CrearTipoInversion">Agregar</a>
-</p>
-<table class="table">
+<table class="table" >
     <thead>
         <tr>
             <th>
@@ -32,10 +29,14 @@
                 @Html.DisplayFor(modelItem => item.Rendimiento)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.IdTipo }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.IdTipo })
+                <a asp-action="EditarTipoInversion" asp-route-id="@item.IdTipo">Editar</a> |
+                <a asp-action="EliminarTipoInversion" asp-route-id="@item.IdTipo">Eliminar</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+
+<div class="container-fluid text-center mt-4">
+    <a asp-action="CrearTipoInversion" class="btn btn-primary">Agregar</a>
+</div>
