--- a/Frontend-ProInvest/Views/Formulario/Direccion.cshtml
+++ b/Frontend-ProInvest/Views/Formulario/Direccion.cshtml
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="~/css/Formulario.css" asp-append-version="true" />
 </head>
 <div class="row justify-content-md-center">
+    @if (ViewBag.Error != null)
+    {
+        <div class="alert alert-danger" role="alert">
+            @ViewBag.Error
+        </div>
+    }
     <div class="col-md-4">
         <h2 class="text-lg-center">Una inversión segura</h2>
         <h4 class="text-lg-center">Dirección</h4>
