--- a/Frontend-ProInvest/Views/Home/Index.cshtml
+++ b/Frontend-ProInvest/Views/Home/Index.cshtml
@@ -1,8 +1,12 @@
-﻿@{
+﻿@model InversionViewModel
+@{
     ViewData["Title"] = "Home Page";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<head>
+    <script defer src="~/js/simulacion.js"></script>
+    <link rel="stylesheet" href="~/css/GraficaSimulacion.css" asp-append-version="true" />
+</head>
 <div class="container">
     <div class="row align-items-center">
         <div class="col h-100">
@@ -17,9 +21,57 @@
                         <label class="form-label" for="typeNumber">Cantidad a invertir:</label>
                         <input type="number" id="typeNumber" class="form-control" min="10000" max="999999999" maxlength="15" />
                     </div>
-                    <a href="#" class="btn btn-primary">Simular</a>
+                    <a href="#SimuladorInversion" class="btn btn-primary">Simular</a>
                 </div>
              </div>
         </div>
     </div>
+    <section id="SimuladorInversion">
+        <div class="row d-flex align-items-center">
+        <div class="col-xs-12 col-sm-6 col-md-6">
+            <form id="formulario-simulacion" for="click">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="card mx-auto mt-3" style="max-width: 500px;">
+                    <div class="card-header text-center fs-4">
+                        Simula tu inversión
+                    </div>
+                    <div class="card-body">
+                        <div class="mb-3">
+                            <label asp-for="Importe" class="form-label"></label>
+                            <input asp-for="Importe" class="form-control" id="importe">
+                            <span asp-validation-for="Importe" class="text-danger"></span>
+                        </div>
+                        <div class="mb-3">
+                            <label asp-for="TipoInversion" class="form-label"></label>
+                            <select id="tiposInversion" asp-for="TipoInversion" class="form-select">
+                                <option value="">Seleccione un valor para este campo</option>
+                                @foreach (var tipo in ViewBag.TiposInversionList)
+                                {
+                                    <option value="@tipo.Value" data-rendimiento="@tipo.Value">@tipo.Text</option>
+                                }
+                            </select>
+                            <span asp-validation-for="TipoInversion" class="text-danger"></span>
+                        </div>
+                        <div class="contenedor-slider">
+                            <label asp-for="Plazo" class="form-label"></label>
+                            <input asp-for="Plazo" type="range" min="1" max="5" value="1" class="slider">
+                        </div>
+                    </div>
+                    <div class="card-footer text-center">
+                        <button class="btn btn-primary" id="btnMostrarGrafica">Simular inversión</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="container-chart">
+                <div class="chart"></div>
+                <a href="../Formulario/DatosPersonales" class="btn btn-primary" id="btnInvertir">Invertir ahora</a>
+            </div>
+        </div>
+    </div>
+    </section>
 </div>
+@section Scripts{
+    <partial name="_ValidationScriptsPartial" />
+}
