--- a/Frontend-ProInvest/Views/Admin/InicioSesion.cshtml
+++ b/Frontend-ProInvest/Views/Admin/InicioSesion.cshtml
@@ -8,7 +8,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario con inicio de sesión</title>
     <link rel="stylesheet" href="~/css/InicioSesion.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -27,16 +26,17 @@
             <div class="contenedor-login mx-4">
                 <h1 class="h3 text-center text-success">ProInvest Latinoámerica</h1>
                 <h2 class="h5 text-center text-muted">Ingreso de Administrador</h2>
-                <form asp-controller="InicioSesion" asp-action="IniciarSesion" method="post">
+                <form asp-controller="admin" asp-action="InicioSesion" method="post">
                     <div class="card mx-auto mt-3">
                         <div class="card-body">
                             <h5 class="card-card-tittle text-center">Inicio de sesión</h5>
                             <div class="mb-3">
                                 <label for="exampleInputEmail1" class="form-label">Usuario</label>
                                 <input type="text" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="userHelp" asp-for="Usuario">
+                                       aria-describedby="userHelp" asp-for="Usuario">
                                 <span asp-validation-for="Usuario" class="text-danger"></span>
-                                <div id="userHelp" class="form-text">Utiliza la cuenta de administrador proporcionada.
+                                <div id="userHelp" class="form-text">
+                                    Utiliza la cuenta de administrador proporcionada.
                                 </div>
                             </div>
                             <div class="mb-3">
@@ -52,7 +52,7 @@
                         </div>
                         <div class="card-footer text-center d-flex justify-content-between align-items-center">
                             <a class="text-decoration-none ">@Model.Mensaje</a>
-                            <button  type="submit" class="btn btn-primary">Iniciar Sesión</button>
+                            <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
                         </div>
                     </div>
                 </form>
