--- a/Frontend-ProInvest/Views/Admin/Menu.cshtml
+++ b/Frontend-ProInvest/Views/Admin/Menu.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewData["Title"] = "Menu";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>Menu</h1>
