--- a/Frontend-ProInvest/Views/Admin/EditarBanco.cshtml
+++ b/Frontend-ProInvest/Views/Admin/EditarBanco.cshtml
@@ -2,7 +2,7 @@
 @{
     Layout = null;
 }
-<form asp-action="AgregarBanco">
+<form asp-action="EditarBancoPost" asp-controller="admin" method="post" asp-route-id="@Model.IdBanco">
     <div class="form-group">
         <label for="Nombre">Nombre</label>
         <input type="text" class="form-control" id="Nombre" asp-for="Banco" value="@Model.Banco" required>
@@ -12,3 +12,10 @@
     </div>
 
 </form>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    <script defer src="~/js/direcciones.js"></script>
+}
