--- a/Frontend-ProInvest/Views/Formulario/AcuerdoOrigenDeFondos.cshtml
+++ b/Frontend-ProInvest/Views/Formulario/AcuerdoOrigenDeFondos.cshtml
@@ -3,27 +3,46 @@
 }
 
 <h2>Acuerdo de orígenes de fondos</h2>
+<h6>Considerando: </h6>
 <p>
-    Considerando:
-    Que el Inversionista tiene la intención de realizar una inversión en la Empresa, en adelante denominada "la Inversión".
-
-    DECLARACIONES:
-
-    Origen Lícito de los Fondos:
-    El Inversionista declara y garantiza que los fondos utilizados para la Inversión provienen de fuentes legítimas y lícitas, y que no están vinculados a ninguna actividad ilícita, incluyendo pero no limitándose a lavado de dinero, fraude, corrupción u otras prácticas financieras ilegales.
-
-    Cumplimiento Legal:
-    El Inversionista asegura que ha cumplido con todas las leyes y regulaciones aplicables en relación con la obtención y transferencia de los fondos, así como con las leyes fiscales pertinentes. Además, se compromete a seguir cumpliendo con dichas leyes durante la duración de la Inversión.
-
-    Transparencia y Colaboración:
-    El Inversionista se compromete a proporcionar toda la información y documentación necesaria para demostrar el origen lícito de los fondos, colaborando en cualquier auditoría o verificación que la Empresa considere necesaria para verificar la legalidad de la Inversión.
-
-    Notificación de Cambios:
-    El Inversionista notificará a la Empresa de inmediato en caso de cualquier cambio en la naturaleza o el origen de los fondos, y tomará las medidas necesarias para garantizar la legalidad y transparencia continua de la Inversión.
-
-    CONFIDENCIALIDAD:
-    Ambas partes acuerdan mantener la información relacionada con la fuente de los fondos y cualquier documentación asociada como estrictamente confidencial, salvo que sea requerido por la ley o autoridad competente.
-
-    VIGENCIA:
-    Este acuerdo entrará en vigor en la fecha de la firma y permanecerá en vigor durante toda la duración de la Inversión y cualquier transacción relacionada.
+    Que el Inversionista tiene la intención de realizar una inversión en la Empresa ProInvest Latinoamérica.
 </p>
+<h6>
+    DECLARACIONES:
+</h6>
+<p>
+    Origen Lícito de los Fondos:
+    <br />
+    El Inversionista declara y garantiza que los fondos utilizados para la Inversión provienen de fuentes legítimas y lícitas, y que no están vinculados a ninguna actividad ilícita, incluyendo pero no limitándose a lavado de dinero, fraude, corrupción u otras prácticas financieras ilegales.
+</p>
+<p>
+    Cumplimiento Legal:
+    <br />
+    El Inversionista asegura que ha cumplido con todas las leyes y regulaciones aplicables en relación con la obtención y transferencia de los fondos, así como con las leyes fiscales pertinentes. Además, se compromete a seguir cumpliendo con dichas leyes durante la duración de la Inversión.
+</p>
+<p>
+    Transparencia y Colaboración:
+    <br />  
+    El Inversionista se compromete a proporcionar toda la información y documentación necesaria para demostrar el origen lícito de los fondos, colaborando en cualquier auditoría o verificación que la Empresa considere necesaria para verificar la legalidad de la Inversión.
+</p>
+<p>
+    Notificación de Cambios:
+    <br />
+    El Inversionista notificará a la Empresa de inmediato en caso de cualquier cambio en la naturaleza o el origen de los fondos, y tomará las medidas necesarias para garantizar la legalidad y transparencia continua de la Inversión.
+</p>
+    <h6>CONFIDENCIALIDAD:</h6>
+<p>
+    Ambas partes acuerdan mantener la información relacionada con la fuente de los fondos y cualquier documentación asociada como estrictamente confidencial, salvo que sea requerido por la ley o autoridad competente.
+</p>
+    <h6>VIGENCIA:</h6>
+<p>
+    Este acuerdo entrará en vigor en la fecha de la firma del contrato de inversión y permanecerá en vigor durante toda la duración de la Inversión y cualquier transacción relacionada.
+</p>
+    
+
+
+
+
+
+
+
