Impresion de contrato (cambiar a GUI finalizar)

--- a/Frontend-ProInvest/Views/Formulario/InformacionBancaria.cshtml
+++ b/Frontend-ProInvest/Views/Formulario/InformacionBancaria.cshtml
@@ -133,7 +133,7 @@
                 })
             </div>
             <div class="text-center mt-3">
-                <input type="submit" name="BtnNext" value="Siguiente" class="btn btn-primary" />
+                <input type="submit" name="BtnNext" value="Siguiente" class="btn btn-primary" id="boton-enviar"/>
                 <input type="submit" name="BtnPrevious" value="Anterior" class="btn btn-primary" style="display:none;" />
             </div>
         </form>
