--- a/Frontend-ProInvest/Views/Formulario/ContratoDeInversion.cshtml
+++ b/Frontend-ProInvest/Views/Formulario/ContratoDeInversion.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Contrato de Inversion ProInvest";
 }
+<div id="Contrato">
+
+
 <h1>Contrato de Inversión</h1>
 
 <p>
@@ -14,11 +17,11 @@
 
     <h6>3. MONTO DE LA INVERSIÓN: </h6>
 
-    El monto total de la inversión acordada es de [Monto en Moneda Local].
+    El monto total de la inversión acordada es de $10,000.
 
     <h6>4. CONDICIONES DE PAGO: </h6>
 
-    El Inversionista se compromete a realizar el pago de la inversión de la siguiente manera: [Detalles del Cronograma de Pagos, si aplica].
+    El Inversionista se compromete a realizar el pago de la inversión.
 
     <h6>5. ORÍGENES LÍCITOS DE LOS FONDOS:</h6>
 
@@ -40,7 +43,17 @@
 
     Este contrato se regirá e interpretará de acuerdo con las leyes del [País] y cualquier disputa será resuelta por los tribunales competentes de dicho país.
 
-    <h6>10. FIRMA:</h6>
-
+    <h3 class="text-center">Firma del contrato</h3>
+    <div class="text-center">
+        <img src="" alt="Firma del contrato" id="firma">
+    </div>
 
 </p>
+</div>
+
+<script>
+    if (window.opener) {
+        document.querySelector('#firma').src = window.opener.obtenerImagen();
+        window.print();
+    }
+</script>
