CU02 Simular gráfica con comparación terminado

--- a/Frontend-ProInvest/Views/Formulario/Direccion.cshtml
+++ b/Frontend-ProInvest/Views/Formulario/Direccion.cshtml
@@ -77,4 +77,5 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
+    <script defer src="~/js/direcciones.js" asp-append-version="true"></script>
 }
