--- a/Frontend-ProInvest/Views/Home/Index.cshtml
+++ b/Frontend-ProInvest/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model InversionViewModel
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "ProInvest Latinoamérica";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <head>
