--- a/Frontend-ProInvest/wwwroot/css/Formulario.css
+++ b/Frontend-ProInvest/wwwroot/css/Formulario.css
@@ -6,7 +6,7 @@
 
 .form-img {
     height: 100%; 
-    object-fit: cover;"
+    object-fit: cover;
 }
 
 .col-form-img {
@@ -18,4 +18,11 @@
     border: 2px solid black;
     border-radius: 4px;
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+}
+.card-expediente {
+    margin: 10px;
+    width: 100%;
+}
+.card-title {
+    white-space: normal;
 }
