--- a/Frontend-ProInvest/Views/Admin/EliminarTipoInversion.cshtml
+++ b/Frontend-ProInvest/Views/Admin/EliminarTipoInversion.cshtml
@@ -32,8 +32,8 @@
             </dd>
         </dl>
 
-        <form asp-action="EliminarTipoInversion">
-            <a asp-action="AdministrarTiposDeInversion" class="btn btn-secondary">Regresar</a> |
+        <form asp-action="EliminarTipoInversion" asp-controller="admin">
+            <a asp-action="AdministrarTiposDeInversion" asp-controller="admin" class="btn btn-secondary">Regresar</a> |
             <input type="submit" value="Borrar" class="btn btn-danger" /> 
         </form>
     </div>
