--- a/Frontend-ProInvest/Views/Admin/CrearTipoInversion.cshtml
+++ b/Frontend-ProInvest/Views/Admin/CrearTipoInversion.cshtml
@@ -11,7 +11,7 @@
     <hr />
     <div class="row justify-content-md-center">
         <div class="col-md-10">
-            <form asp-action="CrearTipoInversion">
+            <form asp-action="CrearTipoInversion" asp-controller="admin">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                 <div class="form-group mb-4">
@@ -30,7 +30,7 @@
                     <span asp-validation-for="Rendimiento" class="text-danger"></span>
                 </div>
                 <div class="form-group mb-4">
-                    <a asp-action="AdministrarTiposDeInversion" class="btn btn-secondary">Regresar</a> |
+                    <a asp-action="AdministrarTiposDeInversion" asp-controller="admin" class="btn btn-secondary">Regresar</a> |
                     <input type="submit" value="Crear" class="btn btn-success" /> 
                 </div>
             </form>
