--- a/Frontend-ProInvest/Views/Admin/EditarTipoInversion.cshtml
+++ b/Frontend-ProInvest/Views/Admin/EditarTipoInversion.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4 ">
-        <form asp-action="EditarTipoInversion">
+        <form asp-action="EditarTipoInversion" asp-controller="admin">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="IdTipo" class="form-control" />
             <div class="form-group mt-2">
@@ -30,8 +30,8 @@
                 <span asp-validation-for="Rendimiento" class="text-danger"></span>
             </div>
             <div class="form-group mt-4">
-                <a asp-action="AdministrarTiposDeInversion" class="btn btn-secondary">Regresar</a> |
-                <input type="submit" value="Guardar" class="btn btn-primary" /> 
+                <a asp-action="AdministrarTiposDeInversion" asp-controller="admin" class="btn btn-secondary">Regresar</a> |
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
