--- a/Frontend-ProInvest/Views/Admin/Menu.cshtml
+++ b/Frontend-ProInvest/Views/Admin/Menu.cshtml
@@ -5,14 +5,14 @@
 
 <h2 class="text-center mb-4"> ¿Qué deseas hacer?</h2>
 
-<div class="row align-items-center row-cols-1 row-cols-md-2 g-4 text-center ">
+<div class="row align-items-center row-cols-1 row-cols-md-2 g-4 text-center justify-content-md-center">
     <div class="col">
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Revisar solicitudes de innversíón</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
-            <a asp-action="SolicitudesInversiones" class="btn btn-primary">Ir allá</a>
+            <a asp-action="SolicitudesInversiones" asp-controller="admin" class="btn btn-primary">Ir allá</a>
         </div>
     </div>
     <div class="col">
@@ -21,7 +21,7 @@
                 <h5 class="card-title">Gestionar tipos de inversión</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
-            <a asp-action="AdministrarTiposDeInversion" class="btn btn-primary">Ir allá</a>
+            <a asp-action="AdministrarTiposDeInversion" asp-controller="admin" class="btn btn-primary">Ir allá</a>
         </div>
     </div>
     <div class="col">
