CU03 Capturar solicitud de inversión y CU04 Subir expediente terminados
* CU02 Simular gráfica con comparación terminado

* Eliminé Privacity

* Eliminé código inaccesible

* Contrato finalizado

* Hot fix Información Bancaria, unir expediente con finalizado y hot fix de simulación comparativa.

--- a/Frontend-ProInvest/Views/Home/Index.cshtml
+++ b/Frontend-ProInvest/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model InversionViewModel
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "ProInvest Latinoamérica";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <head>
@@ -28,6 +28,12 @@
     </div>
     <section id="SimuladorInversion">
         <div class="row d-flex align-items-center">
+            @if (ViewBag.Error != null)
+            {
+                <div class="alert alert-danger" role="alert">
+                    @ViewBag.Error
+                </div>
+            }
         <div class="col-xs-12 col-sm-6 col-md-6">
             <form id="formulario-simulacion" for="click">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -45,16 +51,19 @@
                             <label asp-for="TipoInversion" class="form-label"></label>
                             <select id="tiposInversion" asp-for="TipoInversion" class="form-select">
                                 <option value="">Seleccione un valor para este campo</option>
-                                @foreach (var tipo in ViewBag.TiposInversionList)
-                                {
-                                    <option value="@tipo.Value" data-rendimiento="@tipo.Value">@tipo.Text</option>
-                                }
+                                    @if(ViewBag.TiposInversionList != null)
+                                    {
+                                        foreach (var tipo in ViewBag.TiposInversionList)
+                                        {
+                                            <option value="@tipo.Value" data-rendimiento="@tipo.Value">@tipo.Text</option>
+                                        }       
+                                    }
                             </select>
                             <span asp-validation-for="TipoInversion" class="text-danger"></span>
                         </div>
                         <div class="contenedor-slider">
                             <label asp-for="Plazo" class="form-label"></label>
-                            <input asp-for="Plazo" type="range" min="1" max="5" value="1" class="slider">
+                            <input asp-for="Plazo" type="range" min="1" max="5" value="1" class="slider" id="sliderSimulador">
                         </div>
                     </div>
                     <div class="card-footer text-center">
@@ -65,11 +74,69 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6">
             <div class="container-chart">
-                <div class="chart"></div>
+                <div class="chart" id="chartSimulacion"></div>
                 <a href="../Formulario/DatosPersonales" class="btn btn-primary" id="btnInvertir">Invertir ahora</a>
             </div>
         </div>
     </div>
+    </section>
+    <section id="CompararInversion">
+        <div class="row d-flex align-items-center">
+            <div class="col-xs-12 col-sm-6 col-md-6">
+                <form id="formulario-comparacion" for="click">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="card mx-auto mt-3" style="max-width: 500px;">
+                        <div class="card-header text-center fs-4">
+                            Compara tu inversión
+                        </div>
+                        <div class="card-body">
+                            <div class="mb-3">
+                                <label asp-for="Importe" class="form-label"></label>
+                                <input asp-for="Importe" class="form-control" id="importeComparacion">
+                                <span asp-validation-for="Importe" class="text-danger"></span>
+                            </div>
+                            <div id="tiposDropdown">
+                                <div class="dropdown">
+                                    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton"
+                                            data-bs-toggle="dropdown" aria-expanded="false">
+                                        Tipos de Inversión
+                                    </button>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                        @if (ViewBag.TiposInversionList != null)
+                                        {
+                                            foreach (var tipo in ViewBag.TiposInversionList)
+                                            {
+                                                <li>
+                                                    <a class="dropdown-item">
+                                                        <div class="form-check">
+                                                            <input class="form-check-input" type="checkbox" value="@tipo.Value" id="@tipo.Text" />
+                                                            <label class="form-check-label" for="@tipo.Text">@tipo.Text</label>
+                                                        </div>
+                                                    </a>
+                                                </li>
+                                            }
+                                        }
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="contenedor-slider">
+                                <label asp-for="Plazo" class="form-label"></label>
+                                <input asp-for="Plazo" type="range" min="1" max="5" value="1" class="slider" id="sliderComparacion">
+                            </div>
+                        </div>
+                        <div class="card-footer text-center">
+                            <button class="btn btn-primary" id="btnMostrarGraficaComparacion">Compara tu inversión</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6">
+                <div class="container-chart">
+                    <div class="chart" id="chartComparacion"></div>
+                    <a href="../Formulario/DatosPersonales" class="btn btn-primary" id="btnInvertir">Invertir ahora</a>
+                </div>
+            </div>
+        </div>
     </section>
 </div>
 @section Scripts{
