--- a/Frontend-ProInvest/Views/Admin/AdministrarTiposDeInversion.cshtml
+++ b/Frontend-ProInvest/Views/Admin/AdministrarTiposDeInversion.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "AdministrarTiposDeInversion";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1 class="text-center">Gestionar tipos de inversión</h1>
