--- a/Frontend-ProInvest/Views/Admin/CrearTipoInversion.cshtml
+++ b/Frontend-ProInvest/Views/Admin/CrearTipoInversion.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "CrearTipoInversion";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 <div class="container-fluid text-center">
     <h1>Crear Tipo de Inversion</h1>
