--- a/Frontend-ProInvest/Views/Admin/DetallesDeSolicitudDeInversiones.cshtml
+++ b/Frontend-ProInvest/Views/Admin/DetallesDeSolicitudDeInversiones.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "DetallesDeSolicitudDeInversiones";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>Detalles de la Solicitud</h1>
