--- a/Frontend-ProInvest/Views/Admin/EditarTipoInversion.cshtml
+++ b/Frontend-ProInvest/Views/Admin/EditarTipoInversion.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "EditarTipoInversion";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h1>Editar Tipo de Inversion</h1>
