--- a/Frontend-ProInvest/Views/Admin/Menu.cshtml
+++ b/Frontend-ProInvest/Views/Admin/Menu.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     ViewData["Title"] = "Menu administradores";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";  
 }
 
 <h2 class="text-center mb-4"> ¿Qué deseas hacer?</h2>
@@ -9,8 +10,8 @@
     <div class="col">
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Revisar solicitudes de innversíón</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">Revisar solicitudes de inversión</h5>
+                <p class="card-text">Acceso a las multiples solicitudes de inversión de los usuarios, para obtener toda la información correspondiente y documentos.</p>
             </div>
             <a asp-action="SolicitudesInversiones" asp-controller="admin" class="btn btn-primary">Ir allá</a>
         </div>
@@ -19,7 +20,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Gestionar tipos de inversión</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">Acceso a la administración de los tipos de inversión, teniendo la posibilidad de agregarlos, editarlos o eliminarlos según sea correspondiente.</p>
             </div>
             <a asp-action="AdministrarTiposDeInversion" asp-controller="admin" class="btn btn-primary">Ir allá</a>
         </div>
@@ -28,27 +29,27 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Gestionar origenes de inversión</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">Acceso a la administración de los origenes de inversión, teniendo la posibilidad de agregarlos, editarlos o eliminarlos según sea correspondiente.</p>
             </div>
-            <a href="#" class="btn btn-primary">Ir allá</a>
+            <a href="origenesInversion" class="btn btn-primary">Ir allá</a>
         </div>
     </div>
     <div class="col">
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Gestionar bancos</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">Acceso a la administración de los bancos, teniendo la posibilidad de agregarlos, editarlos o eliminarlos según sea correspondiente..</p>
             </div>
-            <a href="#" class="btn btn-primary">Ir allá</a>
+            <a href="bancos" class="btn btn-primary">Ir allá</a>
         </div>
     </div>
     <div class="col align-self-center">
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Gestionar lista de documentos</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">Acceso a la administración de la lista de documentos, teniendo la posibilidad de agregarlos, editarlos o eliminarlos según sea correspondiente..</p>
             </div>
-            <a href="#" class="btn btn-primary">Ir allá</a>
+            <a href="listaDocumentos" class="btn btn-primary">Ir allá</a>
         </div>
     </div>
 </div>
