--- a/Frontend-ProInvest/Views/Admin/DetallesDeSolicitudDeInversiones.cshtml
+++ b/Frontend-ProInvest/Views/Admin/DetallesDeSolicitudDeInversiones.cshtml
@@ -194,7 +194,7 @@
                             </dd>
                             <dt></dt>
                             <dd>
-                                <a href="@Model.UrlDelArchivo" download>Descargar Archivo</a>
+                                <a href="" download>Descargar Archivo</a>
                             </dd>
                         }
                     }
